

Sep 21, 2006 - chris
o renamed COPYING to LICENSE; also renamed the header comments in all files